Simplify data model (since cashier will operate the system instead of the client)
