# order/models.py
@@ -7,14 +7,9 @@ class Order(models.Model):
     detail = models.TextField()
     clientName = models.TextField()
     price = models.FloatField(blank=True, null=True)
-    isPaid = models.BooleanField(default=False, blank=True, null=True)
+    isPaid = models.BooleanField(default=False)
+    paymentDetail = models.TextField(blank=True, null=True)
     isCancelled = models.BooleanField(default=False)
-
-
-class Payment(models.Model):
-    order = models.OneToOneField(Order, on_delete=models.CASCADE)
-    detail = models.TextField(blank=True, null=True)
-    price = models.FloatField()
 
 
 class MenuItem(models.Model):
