# order/serializers.py
@@ -1,27 +1,18 @@
 from rest_framework import serializers
 
-from order.models import Order, Payment, MenuItem
+from order.models import Order, MenuItem
 
 
 class OrderSerializer(serializers.ModelSerializer):
     detail = serializers.CharField(initial='1 Latte with soy milk', default='1 Latte', help_text='Order detail')
     clientName = serializers.CharField(initial='John Doe', default='John Doe', help_text='Order client name')
-    price = serializers.FloatField(initial='4', default='4', help_text='Order total price', read_only=True)
-    isPaid = serializers.BooleanField(initial=False, default=False, help_text='Is order paid?', read_only=True)
-    isCancelled = serializers.BooleanField(initial=False, default=False, help_text='Is order cancelled?', read_only=True)
+    price = serializers.FloatField(initial='4', default='4', help_text='Order total price')
+    isPaid = serializers.BooleanField(initial=False, default=False, help_text='Is order paid?')
+    paymentDetail = serializers.CharField(initial='Cash', default='Cash', help_text='Order payment detail')
+    isCancelled = serializers.BooleanField(initial=False, default=False, help_text='Is order cancelled?')
 
     class Meta:
         model = Order
-        fields = '__all__'
-        read_only_fields = ['price', 'isPaid', 'isCancelled']
-
-
-class PaymentSerializer(serializers.ModelSerializer):
-    price = serializers.FloatField(initial='4', default='4', help_text='Payment price')
-    detail = serializers.CharField(initial='Cash', default='Cash', help_text='Payment detail')
-
-    class Meta:
-        model = Payment
         fields = '__all__'
 
 
